--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.25",
+    "expo-application": "~7.0.8",
     "expo-constants": "~18.0.10",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.9",
@@ -24,6 +25,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.9",
+    "expo-modules-autolinking": "~3.0.22",
     "expo-notifications": "~0.32.14",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
@@ -31,6 +33,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
